# ai-sketch

./: .gitignore  Cargo.toml  README.md  stream-api.md
ai-flow-synth/: Cargo.toml  README.md
ai-flow-synth/src/: lib.rs
ai-flow-synth/src/core/: agent.rs  context.rs  flow.rs  mod.rs  node.rs  status.rs  stream_message.rs
ai-flow-synth/src/llm/: error.rs  mod.rs  model.rs  tool.rs
ai-flow-synth/src/llm/provider/: deepseek.rs  mod.rs  openai.rs
ai-flow-synth/src/utils/: log.rs  mod.rs  mongo.rs
ai-flow-synth/tests/: test_llm.rs
data-monitor/: Cargo.toml  config.toml
data-monitor/src/: app_data.rs  config.rs  error.rs  main.rs  router.rs  timed_task.rs  utils.rs
data-monitor/src/model/: billing.rs  constant.rs  mod.rs  monitor.rs  usage.rs  user.rs
data-monitor/src/model/monitor/: common.rs  daily_statistic.rs  mod.rs  overview_statistic.rs
data-monitor/src/monitor/: mod.rs  overview.rs  usage.rs  user.rs
data-monitor/src/router/: mock.rs  mod.rs  user.rs
examples/simple-writer/: Cargo.toml
examples/simple-writer/src/: main.rs  node.rs
examples/stream-server/: Cargo.toml
examples/stream-server/src/: index.html  main.rs  node.rs
paper-backend/: Cargo.toml  config.toml  diff.md
paper-backend/src/: app_data.rs  config.rs  error.rs  main.rs
paper-backend/src/model/: constant.rs  folder.rs  mod.rs  user.rs
paper-backend/src/router/: auth.rs  folder.rs  mod.rs  user.rs
paper-backend/src/utils/: jwt.rs
