[workspace]
members = [
    "ai-flow-synth",
    "examples/simple-writer",
    "examples/stream-server",
    "data-monitor",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
mongodb = "3.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
