[workspace]
members = [
    "ai-flow-synth",
    "examples/simple-writer",
    "examples/stream-server",
    "data-monitor",
    "paper-backend",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bson = { version = "2.14.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3.31"
mongodb = "3.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml = { version = "0.8.22" }
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
uuid = { version = "1.16.0", features = ["v4"] }
