[package]
name = "ai-flow-synth"
version = "0.1.0"
edition = "2024"
authors = ["eluvk.dev@gmail.com"]
description = "AI workflow orchestration framework"

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3.6"
async-trait = { workspace = true }
futures = "0.3.31"
mongodb = { workspace = true }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
uuid = { version = "1.16.0", features = ["v4"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
