[package]
name = "data-monitor"
version = "0.1.0"
edition = "2024"
authors = ["eluvk.dev@gmail.com"]

[dependencies]
ai-flow-synth = { path = "../ai-flow-synth" }
anyhow = { workspace = true }
async-trait = { workspace = true }
bson = { version = "2.14.0", features = ["chrono-0_4"] }
chrono = "0.4.41"
futures-util = "0.3.31"
salvo = { version = "0.78", features = ["affix-state", "anyhow"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { version = "0.8.22" }
tracing = { workspace = true }
