[package]
name = "simple-writer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simple-writer"

[dependencies]
ai-flow-synth = { path = "../../ai-flow-synth" }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }