[package]
name = "stream-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stream-server"

[dependencies]
ai-flow-synth = { path = "../../ai-flow-synth" }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = "0.3"
parking_lot = "0.12"
salvo = { version = "0.78", features = ["sse"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
